Enable configuring the local database based on environment variables